<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.chatapp.ui.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.otp.OTPValidationFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="@dimen/_220sdp"
                android:src="@drawable/ic_otp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/guideline" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:padding="@dimen/_8sdp"
                android:gravity="center"
                android:fontFamily="@font/helvetica_bold"
                android:text="@string/otp_verification"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/charcoal"/>
            <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:gravity="center"
                android:fontFamily="@font/euclid_circular_a_regular"
                android:text="@{@string/enter_the_otp_sent_to(viewModel.countryCode, viewModel.phoneNumber)}"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/charcoal"/>

            <LinearLayout
                android:id="@+id/layout_otp_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_28sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_message">

                <com.chaos.view.PinView
                    android:id="@+id/otp_view"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:cursorVisible="true"
                    android:fontFamily="@font/segoe_ui"
                    android:inputType="number"
                    android:textColor="@color/teal_700"
                    android:textSize="@dimen/_22ssp"
                    android:textStyle="normal"
                    app:cursorColor="@color/caribbean_green"
                    app:cursorWidth="@dimen/_1sdp"
                    app:itemCount="6"
                    app:itemHeight="@dimen/_56sdp"
                    app:itemRadius="@dimen/_8sdp"
                    app:itemSpacing="@dimen/_12sdp"
                    app:itemWidth="@dimen/_35sdp"
                    app:lineColor="@drawable/otp_validate"
                    app:lineWidth="@dimen/_1sdp"
                    app:viewType="rectangle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_28sdp"
                android:layout_marginEnd="@dimen/_28sdp"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_otp_view">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|end"
                android:fontFamily="@font/euclid_circular_a_regular"
                android:text="@string/did_not_receive_otp"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/charcoal"/>

            <TextView
                android:id="@+id/tv_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ActionButton"
                android:textAllCaps="true"
                android:gravity="start|center"
                android:fontFamily="@font/helvetica_bold"
                android:textSize="@dimen/_13ssp"
                android:text="@string/resend"
                android:textColor="@color/teal_700" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_28sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_28sdp"
                android:layout_marginBottom="@dimen/_24sdp"
                android:background="@drawable/background_button2"
                android:fontFamily="@font/helvetica_bold"
                android:gravity="center"
                android:paddingStart="@dimen/_12sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingEnd="@dimen/_12sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_resend_otp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>